--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       <!-- Main Section  -->
 
       <section
-        class="w-[75%] md:w-[100%] 2sm:w-[100%] md:ml-0 sm:w-[100%] lg:h-[700px] z-0 main-section bg-backGround_color">
+        class="w-[75%] 2sm:w-[100%] md:ml-0 sm:w-[100%] lg:h-[700px] z-0 main-section bg-backGround_color">
         <div class="bg-[#EFFBF8]">
           <div
             class="flex md:flex-row flex-col-reverse max-w-[1320px] m-[10px]">
@@ -259,7 +259,7 @@
         <section class="bg-white mt-[100px]">
           <div class="flex md:flex-row flex-col max-w-[1320px] items-center">
             <div
-              class="basis-[35%] ml-[30px] text-start text-[16px] font-inter">
+              class="basis-[35%] lg:ml-[30px] sm:ml-0 text-start text-[16px] font-inter">
               <h1 class="hover:text-[#FF972D] duration-[.5s]">
                 - Nice to meet you!
               </h1>
@@ -292,54 +292,88 @@
                 </button>
               </div>
             </div>
-            <div class="basis-[65%] font-inter flex flex-col justify-between">
+            <div
+              class="basis-[65%] lg:text-start sm:text-center 2sm:ml-2 font-inter flex flex-col justify-between">
               <p>
                 Hello there! My name is
                 <span class="text-hoverColor"> Robert Elisc.</span> I am a web
                 designer & developer, and I'm very passionate and dedicated to
                 my work.
               </p>
-              <p class="mt-[30px] w-[80%]">
+              <p class="mt-[30px]">
                 With 20 years experience as a professional a graphic designer, I
                 have acquired the skills and knowledge necessary to make your
                 project a success. I enjoy every step of the design process,
                 from discussion and collaboration.
               </p>
-              <div class="mt-[30px] font-karla">
-                <ul class="flex gap-7 underline uppercase">
-                  <li>Age</li>
-                  <li>City</li>
-                  <li class="ml-[30px]">Mail</li>
-                  <li class="ml-[215px]">Phone</li>
-                </ul>
-              </div>
-              <div class="mt-2">
-                <ul class="flex gap-10 font-semibold text-dark_blue">
-                  <li>21</li>
-                  <li>
-                    <a
-                      href="#"
-                      class="hover:text-hoverColor duration-[.4s] ease"
-                      >Sialkot</a
-                    >
-                  </li>
-                  <li>
-                    <a
-                      class="hover:text-hoverColor duration-[.4s] ease"
-                      href="#"
-                      >abdulhadi200205@gmail.com</a
-                    >
-                  </li>
-                  <li>
-                    <a
-                      class="hover:text-hoverColor duration-[.4s] ease"
-                      href="#"
-                      >+92 3230706787</a
-                    >
-                  </li>
-                </ul>
-              </div>
+              <div class=""></div>
             </div>
+
+            <div class="mt-[30px] font-karla">
+              <!-- <ul
+                class="lg:flex flex-wrap sm:flex-row gap-7 underline uppercase">
+                <li>Age</li>
+                <li>City</li>
+                <li class="ml-[30px]">Mail</li>
+                <li class="ml-[215px]">Phone</li>
+              </ul> -->
+            </div>
+          </div>
+          <div class="info-section">
+            <ul
+              class="lg:flex flex-wrap sm:flex-row gap-4 font-semibold text-dark_blue text-[17px]">
+              <li>
+                <span class="text-[14px]">AGE:</span>
+                21
+              </li>
+              <li>
+                <span class="text-[14px]">Adress:</span>
+                <a
+                  href="#"
+                  class="hover:text-hoverColor duration-[.4s] ease"></a>
+                Sialkot
+              </li>
+              <li>
+                <span class="text-[14px]">Email:</span>
+                <a class="hover:text-hoverColor duration-[.4s] ease" href="#"
+                  >abdulhadi200205@gmail.com</a
+                >
+              </li>
+              <li>
+                <span class="text-[14px]">Phone:</span>
+                <a class="hover:text-hoverColor duration-[.4s] ease" href="#"
+                  >+92 3230706787</a
+                >
+              </li>
+            </ul>
+          </div>
+        </section>
+
+        <section
+          class="grid lg:grid-cols-3 h-[300px] items-center md:grid-col-2 sm:grid-cols-1">
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
+              incidunt dolorum enim aperiam, possimus ab, ullam sapiente tenetur
+              odio aliquid ipsam assumenda sit rerum laudantium laborum eos
+              quia. Inventore, unde.
+            </p>
+          </div>
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
+              incidunt dolorum enim aperiam, possimus ab, ullam sapiente tenetur
+              odio aliquid ipsam assumenda sit rerum laudantium laborum eos
+              quia. Inventore, unde.
+            </p>
+          </div>
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
+              incidunt dolorum enim aperiam, possimus ab, ullam sapiente tenetur
+              odio aliquid ipsam assumenda sit rerum laudantium laborum eos
+              quia. Inventore, unde.
+            </p>
           </div>
         </section>
       </section>
